# Conti

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_babel.sh  utils.py
configs/: default.yaml  phase1_10rounds_babel.yaml  phase1_10rounds_drift.yaml  phase1_gsm8k_only.yaml  phase1_verifier.yaml  phase2_10rounds_babel.yaml  phase2_10rounds_drift.yaml  phase2_llama3.yaml  phase2_verifier_buffer.yaml  phase2_with_safety.yaml  smoke_gpt2.yaml
conti/: __init__.py  config_schema.py  logging.py  reproducibility.py
conti/data/: __init__.py  advbench_subset.jsonl  donotanswer_subset.jsonl  loaders.py  safety_replay.jsonl  xstest_subset.jsonl
conti/eval/: __init__.py  drift.py  metrics.py  stats.py
conti/loop/: __init__.py  run.py
conti/replay/: __init__.py  buffer.py
conti/training/: __init__.py  ewc.py  format.py  sft.py
conti/verifier/: __init__.py  keyword.py  model_scorer.py
docs/: RESEARCH_PROTOCOL.md  RESULTS_TEMPLATE.md
notebooks/: exploration.ipynb  scratchpad.py
outputs/phase1_10rounds_drift/: metrics.json  run_manifest.json  supervised_counts.json
outputs/phase2_10rounds_drift/: metrics.json  run_manifest.json  supervised_counts.json
outputs/phase2_llama3/: drift_log.jsonl  metrics.json  round_metrics.jsonl  (+1 more)
proto laptop run/: report of results.md  run_demo.py
scripts/: aggregate_results.py  plot_results.py  run_experiment.py  run_sweep.py
seal_project/: requirements.txt
tests/: conftest.py  test_config.py  test_drift.py  test_ewc.py  test_loaders.py  test_stats.py  test_verifier.py
(+40 files in other folders)
